argocd/applications/cms/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
  namespace: cms
spec:
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: cms
          image: registry.ide-newton.ts.net/lab/cms
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 3000
