argocd/applications/cms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms
  namespace: cms
spec:
  selector:
    app: cms
  ports:
    - port: 80
      targetPort: 3000
