argocd/applications/cms/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cms
  namespace: cms
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`cms.proompteng.ai`)
      services:
        - name: cms
          port: 80
